# amp

./: .clinerules  .gitignore  .npmignore  .prettierignore  Cargo.toml  LICENSE  README.md  build.rs  build.ts  bun.lockb  eslint.config.js  index.ts  package-lock.json  package.json  tsconfig.json  tsconfig.publish.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
bench/: parse.bench.ts
bench/fixtures/: large.md
benches/: parse.bench.ts  parser_bench.rs
benches/fixtures/: medium.md  small.md
lib/: .clinerules  definition.ts  pareLinkInTextBody.test.ts  parseFrontmatter.test.ts  parseLinkInTextBody.ts  parseTextBody.test.ts  parseTextBody.ts  parser.integration.test.ts  parser.test.ts  parser.ts  split.test.ts  splitLinkFromText.test.ts  splitLinkFromText.ts
src/: types.rs
src/parser/: amp.rs  integration_tests.rs  mod.rs  parse_block.rs  parse_frontmatter.rs  parse_link.rs  parse_text_body.rs  parse_text_body_style.rs  split.rs
test/: body.test.md  checkHeadSymbol.test.ts  class.test.ts  code.test.md  code.test.ts  full.test.md  heading.test.md  heading.test.ts  image.test.md  image.test.ts  list.test.md  list.test.ts  mergeSameTypeTextBody.test.ts  paragraph.test.md  paragraph.test.ts  pareLinkInTextBody.test.ts  parseFrontmatter.test.ts  parseTextBody.test.ts  parseTextBodyStyle.test.ts  parseTextBodyStyleV2.test.ts  parser.integration.test.ts  parser.test.ts  quote.test.md  quote.test.ts  split.test.ts  splitLinkFromText.test.ts  thematicBreak.test.md  thematicBreak.test.ts
