[package]
name = "amp"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type= ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
tsify-next = { version = "0.5", features = ["js"] }
serde = { version = "1", features = ["derive"] }
regex = "1"

[profile.release]
lto = true
strip = "symbols"

[dev-dependencies]
criterion = {version = "0.5", features=["html_reports"]}

[[bench]]
name = "parser_bench"
harness = false